@@ -4,7 +4,7 @@ AC_INIT(gconf/gconf.h)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(GConf, 0.50)
+AM_INIT_AUTOMAKE(GConf, 0.51)
 
 AM_MAINTAINER_MODE
 
